<resources>
    <string name="app_name">CarEase</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="email_error">Email Error</string>
    <string name="password">Password</string>
    <string name="password_error">Password Error</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign in</string>
    <string name="have_an_account">Have an account?</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="bag">Bag</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="karan_jadaun">Karan Jadaun</string>
    <string name="car_sale">Car Sale</string>
    <string name="check">Check</string>
    <string name="New">New</string>
    <string name="view_all">View All</string>
    <string name="you_never_seen_before">You never seen before</string>
    <string name="brand_name">Brand name</string>
    <string name="product_name">Product name</string>
    <string name="product_price">Product price</string>
    <string name="_10">-10%</string>
    <string name="sale">Sale</string>
    <string name="my_bag">My Bag</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="_22">22</string>
    <string name="total_amount">Total amount:</string>
    <string name="_120">$120</string>
    <string name="check_out">CHECK OUT</string>
    <string name="empty_bag">Empty Bag</string>
    <string name="empty_favourite">Empty Favourite</string>
    <string name="my_profile">My Profile</string>
    <string name="profile_name">Profile Name</string>
    <string name="profile_email">Profile Email</string>
    <string name="upload_image">Upload Image</string>
    <string name="my_orders">My Orders</string>
    <string name="you_have_no_orders">you have no orders</string>
    <string name="shipping_addresses">Shipping addresses</string>
    <string name="no_address">No Address</string>
    <string name="payment_methods">Payment methods</string>
    <string name="you_have_no_cart">You Have no cart</string>
    <string name="promo_codes">Promo codes</string>
    <string name="you_have_special_promo_codes">You have special promo codes</string>
    <string name="settings">Settings</string>
    <string name="notifications_password">Notifications, password</string>
    <string name="categories">Categories</string>
    <string name="fashion_sale">Fashion Sale</string>
    <string name="_2_2_0_3">* * * * * * * * * * * * 2 2 0 3</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="_05_34">05/34</string>
    <string name="use_as_default_payment_method">Use as default payment method</string>
    <string name="todo">TODO</string>
</resources>