<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:id="@+id/cardView"
        android:layout_height="200dp"
        app:cardCornerRadius="10dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/backgroundAd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/productImage_singleProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bn"/>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="180dp"
        android:layout_height="110dp"
        android:background="@color/background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView">

        <RatingBar
            android:id="@+id/productRating_singleProduct"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:numStars="5"
            android:rating="5"
            android:scaleX=".4"
            android:scaleY=".4"
            style="@style/Widget.AppCompat.RatingBar.Indicator"
            android:transformPivotX="0dp"
            android:transformPivotY="15dp"/>

        <TextView
            android:id="@+id/productBrandName_singleProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_light"
            android:textColor="@color/textAd"
            android:maxLines="1"
            android:text="@string/brand_name"
            android:textSize="13sp"/>

        <TextView
            android:id="@+id/productName_singleProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/metropolis_regular"
            android:textColor="@color/mainText"
            android:maxLines="1"
            android:text="@string/product_name"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/productPrice_singleProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/metropolis_light"
            android:textColor="@color/primary"
            android:maxLines="1"
            android:text="@string/product_price"
            android:textSize="13sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/discount_singleProduct"
        android:visibility="gone"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@drawable/discount_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/discountTv_singleProduct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/_10"
            android:textSize="11sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:fontFamily="@font/metropolis_semibold"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>