<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MainScrollView_homeFrag"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    tools:context=".presentation.fragment.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/MainLayout_homeFrag" >

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:id="@+id/coverRecView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/cover_single"/>

        <LinearLayout
            android:id="@+id/newLayout"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/coverRecView"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/metropolis_semibold"
                        android:text="@string/New"
                        android:textColor="@color/mainText"
                        android:textSize="25sp"/>

                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/product_GroupViewAll"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/metropolis_regular"
                        android:gravity="center"
                        android:text="@string/view_all"
                        android:textColor="@color/mainText"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/metropolis_regular"
                    android:text="@string/you_never_seen_before"
                    android:textColor="@color/textAd"
                    android:textSize="11sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/newRecView"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/single_product" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/saleLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/newLayout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp">

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/metropolis_semibold"
                        android:text="@string/sale"
                        android:textColor="@color/mainText"
                        android:textSize="25sp" />

                    <androidx.legacy.widget.Space
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/saleProduct_ViewAll"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/metropolis_regular"
                        android:gravity="center"
                        android:text="@string/view_all"
                        android:textColor="@color/mainText"
                        android:textSize="12sp" />

                </LinearLayout>

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/metropolis_regular"
                    android:text="@string/you_never_seen_before"
                    android:textColor="@color/textAd"
                    android:textSize="11sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/saleRecView"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="100dp"
            android:id="@+id/animationView"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_rawRes="@raw/circle_progress"/>

        <ImageView
            android:id="@+id/visualSearchBtn_homePage"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_visual_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>